--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 {% block navigator %}
     <div id="navigation">
         <ul id="nav" class="menu">
-            <li class="nav-link"><a href="#">News</a></li>
+            <li class="nav-link"><a href="#">电视</a></li>
             <li class="nav-link"><a href="#">News</a></li>
             <li class="nav-link"><a href="#">News</a></li>
             <li class="nav-link"><a href="#">News</a></li>
@@ -26,12 +26,16 @@
     </div>
 {% endblock %}
 
+<div id="content">
 {% block content %}
 
 {% endblock %}
+</div>
 
 {% block footer %}
-
+<footer>
+AAA
+</footer>
 {% endblock %}
 
 <!-- <script src="{{ BASE_URL }}/js/bootstrap.js"></script> -->
