--- a/templates/stock_list.html
+++ b/templates/stock_list.html
@@ -8,12 +8,15 @@
         <div class="image-wrapper">
             <img height="60" width="60" src={{ BASE_URL }}img/{{ stock.uid }}.jpg />
         </div>
-        <span class="stock_post"><a>京东</a>&nbsp;&nbsp;</span><br/>
+        <span class="stock_post"><img height="12" width="12" src={{ BASE_URL }}image/{{ provider }}_favicon.ico><a>京东</a>&nbsp;&nbsp;</span><br/>
         <span class="stock_title"><a href={{ stock.url }} target="_blank">{{ stock.name }}</a></span><br/>
         <span class="stock_price">
             {% with stock.price_list|last as last_price %}
-                {{ last_price.price }} @ {{ stock.last_update }}
+                {{ last_price.price }}
             {% endwith %}
+        </span>
+        <span class="stock_update_time">
+            @ {{ stock.last_update }}
         </span>
         <!-- <img width="24" height="24" src={{ BASE_URL }}img/{{ stock.uid }}.jpg />
         <a href={{ stock.url }} target="_blank">{{ stock.name }}</a>
