--- a/templates/base.html
+++ b/templates/base.html
@@ -12,32 +12,51 @@
 <link rel="stylesheet" href="{{ BASE_URL }}css/bootstrap.css">
 <link rel="stylesheet" href="{{ BASE_URL }}css/bijia.css">
 
+<script>
+    function onCategorySelect()
+    {
+        var provider = $("#stock_provider").val();
+        var category = $("#stock_category").val();
+        window.location = "/bijia/index?provider=" + provider + "&category=" + category;
+    }
+</script>
+
 </body>
 
 {% block navigator %}
     <div id="navigation">
         <ul id="nav" class="menu">
             <li class="nav-link"><a href="#">供货商</a>
-                <select>
-                    <option>京东</option>
+                <select id="stock_provider" class="nav-select">
+                    <option value="jd">京东</option>
                 </select>
             </li>
             <li class="nav-link"><a href="#">类别</a>
-                <select>
-                    <option>平板电视</option>
+                <select id="stock_category" class="nav-select" onchange="onCategorySelect()">
+                    {% for category_item in category_list %}
+                        <option value={{ category_item.value }}
+                                {% if category_item.value == category %}
+                                    selected
+                                {% endif %}
+                                >
+                            {{ category_item.name }}</option>
+                    {% endfor %}
                 </select>
             </li>
             <li class="nav-link">
                 <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=1>全部商品</a>
             </li>
             <li class="nav-link">
-                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=2>最新价格变动</a>
+                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=2>今日新品</a>
             </li>
             <li class="nav-link">
-                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=3>最新价格下降</a>
+                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=3>最新价格变动</a>
             </li>
             <li class="nav-link">
-                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=4>最新价格上涨</a>
+                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=4>最新价格下降</a>
+            </li>
+            <li class="nav-link">
+                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=5>最新价格上涨</a>
             </li>
             <li class="nav-link">
                 <a href=/bijia/index?provider={{ provider }}&category={{ category }}>联系我们</a>
