1. mongodb where clause applied 2. mobile price added

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,10 +53,7 @@
                 <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=3>最新价格变动</a>
             </li>
             <li class="nav-link">
-                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=4>最新价格下降</a>
-            </li>
-            <li class="nav-link">
-                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=5>最新价格上涨</a>
+                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=3>移动好价</a>
             </li>
             <li class="nav-link">
                 <a href=/bijia/index?provider={{ provider }}&category={{ category }}>联系我们</a>
