--- a/templates/stock_list.html
+++ b/templates/stock_list.html
@@ -12,11 +12,16 @@
         <span class="stock_title"><a href={{ stock.url }} target="_blank">{{ stock.name }}</a></span><br/>
         <span class="stock_price">
             {% with stock.price_list|last as last_price %}
-                {{ last_price.price }}
+                {{ last_price.price }} 移动端
+                {% if last_price.price == last_price.mobile_price %}
+                    {{ last_price.mobile_price }}
+                {% else %}
+                    <strong>{{ last_price.mobile_price }}</strong>
+                {% endif %}
             {% endwith %}
         </span>
         <span class="stock_update_time">
-            @ {{ stock.last_update }}
+            @ {{ stock.last_update|date:"Y-m-d H:i" }}
         </span>
         <!-- <img width="24" height="24" src={{ BASE_URL }}img/{{ stock.uid }}.jpg />
         <a href={{ stock.url }} target="_blank">{{ stock.name }}</a>
