--- a/templates/base.html
+++ b/templates/base.html
@@ -44,16 +44,19 @@
                 </select>
             </li>
             <li class="nav-link">
-                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=1>全部商品</a>
+                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=1>我看你最值</a>
             </li>
             <li class="nav-link">
-                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=2>今日新品</a>
+                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=2>全部商品</a>
             </li>
             <li class="nav-link">
-                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=3>最新价格变动</a>
+                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=3>今日新品</a>
             </li>
             <li class="nav-link">
-                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=3>移动好价</a>
+                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=4>最新价格变动</a>
+            </li>
+            <li class="nav-link">
+                <a href=/bijia/index?provider={{ provider }}&category={{ category }}&show=5>移动好价</a>
             </li>
             <li class="nav-link">
                 <a href=/bijia/index?provider={{ provider }}&category={{ category }}>联系我们</a>
