social icon added

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,13 @@
 
 {% block footer %}
 <footer>
+<div align="center">
+    <img class="social_icon" src="{{ BASE_URL }}image/icon_weibo.png">
+    <img class="social_icon" src="{{ BASE_URL }}image/icon_wechat.png">
+    <img class="social_icon" src="{{ BASE_URL }}image/icon_tencent.png">
+    <img class="social_icon" src="{{ BASE_URL }}image/icon_facebook.png">
+    <img class="social_icon" src="{{ BASE_URL }}image/icon_twitter.png">
+</div>
 </footer>
 {% endblock %}
 
