--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title></title>
+    <title>我看你最值</title>
+    <link rel="icon" href="{{ BASE_URL }}image/favicon.ico" />
 </head>
 <body>
 
