--- a/templates/stock_list.html
+++ b/templates/stock_list.html
@@ -25,7 +25,7 @@
             {% else %}
                 更新时间:{{ stock.last_update|date:"Y-m-d H:i" }}
             {% endif %}
-            - 评论数:{{ stock.comments }}
+            - 评论数:<a href="http://item.jd.com/{{ stock.uid }}.html#comment">{{ stock.comments }}</a>
         </span>
     </div>
     {% endfor %}
