--- a/static/css/bijia.css
+++ b/static/css/bijia.css
@@ -2,7 +2,7 @@
 
 #navigation {
     margin-top: 0px;
-    height: 30px;
+    height: 40px;
     width: 100%;
     color: #727272;
     background-color: #f9f9f9;
@@ -13,12 +13,13 @@
 }
 
 #nav {
-    height: 60px;
-    margin: 0;
+    margin-top: 5px;
+    margin-bottom: 5px;
     padding: 0;
-    position: absolute;
-    left: 0;
-    right: 0;
+}
+
+.nav-link a {
+    text-decoration: none;
 }
 
 .menu {
@@ -98,4 +99,8 @@ footer {
 .social_icon {
     width: 32px;
     height: 32px;
+}
+
+#switcher {
+    cursor: pointer;
 }
